--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "leetcode-query": "^2.0.0",
+    "lucide-react": "^0.525.0",
     "next": "15.3.5",
+    "openai": "^5.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
